--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "bootswatch": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
     "sass": "^1.44.0",
     "web-vitals": "^1.1.2"
